Fixed duplicate image behind menu and tweaked dropdown menu on small screens

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -190,8 +190,6 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default, .post .navbar-default {
     border-color: transparent;
-    background-color: #222;
-    background-image: url(../img/header-bg.jpg);
     background-position: top center;
     background-repeat: none;
     background-size: cover;
@@ -202,7 +200,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar.navbar-default.navbar-fixed-top.navbar-shrink {
   background:none;
-  background-color: rgba(255, 255, 255, 0.5);;
+  background-color: rgba(255, 255, 255, 1);;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   transition: all .3s;
@@ -239,15 +237,22 @@ fieldset[disabled] .btn-xl.active {
     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.55) 19%, rgba(0,0,0,0.55) 91%, rgba(0,0,0,0) 99%, rgba(0,0,0,0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
 
+
   }
 
   .navbar-shrink .navbar-collapse.collapsing, .navbar-shrink .navbar-collapse.collapse.in {
     background: rgba(255,255,255, .8);
   }
 
+  .nav li a {
+    border-bottom: 1px solid rgba(255,255,255, .2);
+    text-shadow: 0px 0px 10px rgba(0, 0, 8, .9);
+  }
+
   .navbar-shrink .nav li a {
     color: rgba(0,0,0, .6);
     text-shadow: 0px 0px 10px rgba(0, 0, 8, .2);
+    border-bottom: 1px solid rgba(0,0,0, .2);
 
   }
 
